--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@zoom-image/core": "^0.24.0",
     "autoprefixer": "10.4.14",
     "daisyui": "^2.51.5",
     "eslint": "8.38.0",
