--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-final-form": "^6.5.9",
     "react-icons": "^4.9.0",
     "sharp": "^0.32.6",
+    "styled-components": "^6.1.1",
     "tailwindcss": "3.3.1"
   }
 }
