--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@zoom-image/core": "^0.24.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.2",
-    "daisyui": "^2.51.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
@@ -26,5 +25,8 @@
     "sharp": "^0.32.6",
     "styled-components": "^6.1.1",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "daisyui": "^4.8.0"
   }
 }
