--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@tanstack/react-query": "^5.28.8",
+    "@tanstack/react-query-devtools": "^5.28.8",
     "@zoom-image/core": "^0.24.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.2",
@@ -22,6 +24,7 @@
     "react-dropzone": "^14.2.3",
     "react-final-form": "^6.5.9",
     "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.8.1",
     "sharp": "^0.32.6",
     "styled-components": "^6.1.1",
     "tailwindcss": "3.3.1"
