--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-content-loader": "^7.0.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-final-form": "^6.5.9",
